{
  "version": 4,
  "terraform_version": "1.6.3",
  "serial": 50,
  "lineage": "b7252804-f4d4-a419-fe84-b77ff66f5402",
  "resources": [
    {
      "mode": "data",
      "type": "azurerm_public_ip",
      "name": "public_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/58006b71-9fca-4df3-ae9b-893c6e4267ce/resourceGroups/rg-university-s4a-image_terraform/providers/Microsoft.Network/publicIPAddresses/pip-vm-node1",
            "idle_timeout_in_minutes": 4,
            "ip_address": "4.241.92.30",
            "ip_version": "IPv4",
            "location": "japaneast",
            "name": "pip-vm-node1",
            "resource_group_name": "rg-university-s4a-image_terraform",
            "sku": "Basic",
            "tags": {
              "sinequa-auto-disk": "auto",
              "sinequa-data-storage-url": "https://stprim0bc56606a55823e8ef.blob.core.windows.net/sinequa/grids/rg-university-s4a-image_terraform/",
              "sinequa-engine": "engine1",
              "sinequa-node": "vm-node1",
              "sinequa-path": "C:\\sinequa",
              "sinequa-primary-node-id": "1",
              "sinequa-webapp": "webApp1",
              "sinequa-webapp-fw-port": "80"
            }
          }
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "sinequa_nsg_app",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/58006b71-9fca-4df3-ae9b-893c6e4267ce/resourceGroups/rg-university-s4a-image_terraform/providers/Microsoft.Network/networkSecurityGroups/nsg-app",
            "location": "japaneast",
            "name": "nsg-app",
            "resource_group_name": "rg-university-s4a-image_terraform",
            "security_rule": [],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.sinequa_rg"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "http_on_app",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "80",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/58006b71-9fca-4df3-ae9b-893c6e4267ce/resourceGroups/rg-university-s4a-image_terraform/providers/Microsoft.Network/networkSecurityGroups/nsg-app/securityRules/http",
            "name": "http",
            "network_security_group_name": "nsg-app",
            "priority": 110,
            "protocol": "Tcp",
            "resource_group_name": "rg-university-s4a-image_terraform",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.sinequa_rg",
            "module.network.azurerm_network_security_group.sinequa_nsg_app"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "rdp_on_app",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "3389",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/58006b71-9fca-4df3-ae9b-893c6e4267ce/resourceGroups/rg-university-s4a-image_terraform/providers/Microsoft.Network/networkSecurityGroups/nsg-app/securityRules/RDP",
            "name": "RDP",
            "network_security_group_name": "nsg-app",
            "priority": 300,
            "protocol": "Tcp",
            "resource_group_name": "rg-university-s4a-image_terraform",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.sinequa_rg",
            "module.network.azurerm_network_security_group.sinequa_nsg_app"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet_app",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.3.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/58006b71-9fca-4df3-ae9b-893c6e4267ce/resourceGroups/rg-university-s4a-image_terraform/providers/Microsoft.Network/virtualNetworks/vnet/subnets/snet-app",
            "name": "snet-app",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "rg-university-s4a-image_terraform",
            "virtual_network_name": "vnet"
          },
          "dependencies": [
            "azurerm_resource_group.sinequa_rg",
            "module.network.azurerm_virtual_network.sinequa_vnet"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "sinequa_subnet_nsg_app",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/58006b71-9fca-4df3-ae9b-893c6e4267ce/resourceGroups/rg-university-s4a-image_terraform/providers/Microsoft.Network/virtualNetworks/vnet/subnets/snet-app",
            "network_security_group_id": "/subscriptions/58006b71-9fca-4df3-ae9b-893c6e4267ce/resourceGroups/rg-university-s4a-image_terraform/providers/Microsoft.Network/networkSecurityGroups/nsg-app",
            "subnet_id": "/subscriptions/58006b71-9fca-4df3-ae9b-893c6e4267ce/resourceGroups/rg-university-s4a-image_terraform/providers/Microsoft.Network/virtualNetworks/vnet/subnets/snet-app"
          },
          "dependencies": [
            "azurerm_resource_group.sinequa_rg",
            "module.network.azurerm_network_security_group.sinequa_nsg_app",
            "module.network.azurerm_subnet.subnet_app",
            "module.network.azurerm_virtual_network.sinequa_vnet"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "sinequa_vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.3.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "ccfe9bc4-0123-4aac-94fd-8da981b9f14f",
            "id": "/subscriptions/58006b71-9fca-4df3-ae9b-893c6e4267ce/resourceGroups/rg-university-s4a-image_terraform/providers/Microsoft.Network/virtualNetworks/vnet",
            "location": "japaneast",
            "name": "vnet",
            "resource_group_name": "rg-university-s4a-image_terraform"
          },
          "dependencies": [
            "azurerm_resource_group.sinequa_rg"
          ]
        }
      ]
    },
    {
      "module": "module.vm-primary-node1",
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "sinequa_vm_nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/58006b71-9fca-4df3-ae9b-893c6e4267ce/resourceGroups/rg-university-s4a-image_terraform/providers/Microsoft.Network/networkInterfaces/nic-vm-node1",
            "internal_domain_name_suffix": "ysn53tbdagwevfh3rwuydoprjh.lx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "ipconfig",
                "primary": true,
                "private_ip_address": "10.3.1.6",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/58006b71-9fca-4df3-ae9b-893c6e4267ce/resourceGroups/rg-university-s4a-image_terraform/providers/Microsoft.Network/publicIPAddresses/pip-vm-node1",
                "subnet_id": "/subscriptions/58006b71-9fca-4df3-ae9b-893c6e4267ce/resourceGroups/rg-university-s4a-image_terraform/providers/Microsoft.Network/virtualNetworks/vnet/subnets/snet-app"
              }
            ],
            "location": "japaneast",
            "name": "nic-vm-node1",
            "private_ip_address": "10.3.1.6",
            "private_ip_addresses": [
              "10.3.1.6"
            ],
            "resource_group_name": "rg-university-s4a-image_terraform",
            "tags": {
              "sinequa-auto-disk": "auto",
              "sinequa-data-storage-url": "https://stprim0bc56606a55823e8ef.blob.core.windows.net/sinequa/grids/rg-university-s4a-image_terraform/",
              "sinequa-engine": "engine1",
              "sinequa-node": "vm-node1",
              "sinequa-path": "C:\\sinequa",
              "sinequa-primary-node-id": "1",
              "sinequa-webapp": "webApp1",
              "sinequa-webapp-fw-port": "80"
            }
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "ip_configuration"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "subnet_id"
              }
            ]
          ],
          "dependencies": [
            "azurerm_resource_group.sinequa_rg",
            "module.kv_st_services.azurerm_key_vault.sinequa_kv",
            "module.kv_st_services.azurerm_key_vault_secret.sinequa_authentication_secret",
            "module.kv_st_services.azurerm_key_vault_secret.sinequa_kv_default_admin_password",
            "module.kv_st_services.azurerm_key_vault_secret.sinequa_kv_secret_password",
            "module.kv_st_services.azurerm_key_vault_secret.sinequa_kv_secret_sinequa_license",
            "module.kv_st_services.azurerm_role_assignment.sinequa_kv_role_for_id",
            "module.kv_st_services.azurerm_role_assignment.sinequa_kv_role_for_me",
            "module.kv_st_services.azurerm_role_assignment.sinequa_st_hot_role_id",
            "module.kv_st_services.azurerm_role_assignment.sinequa_st_premium_role_id",
            "module.kv_st_services.azurerm_storage_account.sinequa_st_hot",
            "module.kv_st_services.azurerm_storage_account.sinequa_st_premium",
            "module.kv_st_services.azurerm_storage_blob.sinequa-secondary",
            "module.kv_st_services.azurerm_storage_container.sinequa_st_hot_container",
            "module.kv_st_services.azurerm_storage_container.sinequa_st_premium_container",
            "module.kv_st_services.azurerm_user_assigned_identity.identity",
            "module.kv_st_services.data.azurerm_client_config.current",
            "module.kv_st_services.module.grid_var.azurerm_storage_blob.sinequa-engine-aliases",
            "module.kv_st_services.module.grid_var.azurerm_storage_blob.sinequa-enginelist-aliases",
            "module.kv_st_services.module.grid_var.azurerm_storage_blob.sinequa-indexer-aliases",
            "module.kv_st_services.module.grid_var.azurerm_storage_blob.sinequa-indexerlist-aliases",
            "module.kv_st_services.module.grid_var.azurerm_storage_blob.sinequa-keyvault",
            "module.kv_st_services.module.grid_var.azurerm_storage_blob.sinequa-node-aliases",
            "module.kv_st_services.module.grid_var.azurerm_storage_blob.sinequa-nodelist-aliases",
            "module.kv_st_services.module.grid_var.azurerm_storage_blob.sinequa-queuecluster",
            "module.kv_st_services.module.grid_var.azurerm_storage_blob.sinequa-version",
            "module.kv_st_services.module.grid_var.azurerm_storage_blob.sinequa_authentication_enabled",
            "module.kv_st_services.module.grid_var.azurerm_storage_blob.sinequa_beta",
            "module.kv_st_services.module.grid_var.azurerm_storage_blob.sinequa_primary_nodes",
            "module.network.azurerm_network_security_group.sinequa_nsg_app",
            "module.network.azurerm_network_security_group.sinequa_nsg_front",
            "module.network.azurerm_network_security_rule.http_on_app",
            "module.network.azurerm_network_security_rule.rdp_on_app",
            "module.network.azurerm_subnet.subnet_app",
            "module.network.azurerm_subnet.subnet_front",
            "module.network.azurerm_subnet_network_security_group_association.sinequa_subnet_nsg_app",
            "module.network.azurerm_subnet_network_security_group_association.sinequa_subnet_nsg_front",
            "module.network.azurerm_virtual_network.sinequa_vnet",
            "module.vm-primary-node1.azurerm_public_ip.sinequa_vm_pip",
            "random_password.passwd",
            "random_password.sq_passwd"
          ]
        }
      ]
    },
    {
      "module": "module.vm-primary-node1",
      "mode": "managed",
      "type": "azurerm_network_interface_security_group_association",
      "name": "sinequa_nic_nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/58006b71-9fca-4df3-ae9b-893c6e4267ce/resourceGroups/rg-university-s4a-image_terraform/providers/Microsoft.Network/networkInterfaces/nic-vm-node1|/subscriptions/58006b71-9fca-4df3-ae9b-893c6e4267ce/resourceGroups/rg-university-s4a-image_terraform/providers/Microsoft.Network/networkSecurityGroups/nsg-app",
            "network_interface_id": "/subscriptions/58006b71-9fca-4df3-ae9b-893c6e4267ce/resourceGroups/rg-university-s4a-image_terraform/providers/Microsoft.Network/networkInterfaces/nic-vm-node1",
            "network_security_group_id": "/subscriptions/58006b71-9fca-4df3-ae9b-893c6e4267ce/resourceGroups/rg-university-s4a-image_terraform/providers/Microsoft.Network/networkSecurityGroups/nsg-app"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "network_security_group_id"
              }
            ]
          ],
          "dependencies": [
            "azurerm_resource_group.sinequa_rg",
            "module.kv_st_services.azurerm_key_vault.sinequa_kv",
            "module.kv_st_services.azurerm_key_vault_secret.sinequa_authentication_secret",
            "module.kv_st_services.azurerm_key_vault_secret.sinequa_kv_default_admin_password",
            "module.kv_st_services.azurerm_key_vault_secret.sinequa_kv_secret_password",
            "module.kv_st_services.azurerm_key_vault_secret.sinequa_kv_secret_sinequa_license",
            "module.kv_st_services.azurerm_role_assignment.sinequa_kv_role_for_id",
            "module.kv_st_services.azurerm_role_assignment.sinequa_kv_role_for_me",
            "module.kv_st_services.azurerm_role_assignment.sinequa_st_hot_role_id",
            "module.kv_st_services.azurerm_role_assignment.sinequa_st_premium_role_id",
            "module.kv_st_services.azurerm_storage_account.sinequa_st_hot",
            "module.kv_st_services.azurerm_storage_account.sinequa_st_premium",
            "module.kv_st_services.azurerm_storage_blob.sinequa-secondary",
            "module.kv_st_services.azurerm_storage_container.sinequa_st_hot_container",
            "module.kv_st_services.azurerm_storage_container.sinequa_st_premium_container",
            "module.kv_st_services.azurerm_user_assigned_identity.identity",
            "module.kv_st_services.data.azurerm_client_config.current",
            "module.kv_st_services.module.grid_var.azurerm_storage_blob.sinequa-engine-aliases",
            "module.kv_st_services.module.grid_var.azurerm_storage_blob.sinequa-enginelist-aliases",
            "module.kv_st_services.module.grid_var.azurerm_storage_blob.sinequa-indexer-aliases",
            "module.kv_st_services.module.grid_var.azurerm_storage_blob.sinequa-indexerlist-aliases",
            "module.kv_st_services.module.grid_var.azurerm_storage_blob.sinequa-keyvault",
            "module.kv_st_services.module.grid_var.azurerm_storage_blob.sinequa-node-aliases",
            "module.kv_st_services.module.grid_var.azurerm_storage_blob.sinequa-nodelist-aliases",
            "module.kv_st_services.module.grid_var.azurerm_storage_blob.sinequa-queuecluster",
            "module.kv_st_services.module.grid_var.azurerm_storage_blob.sinequa-version",
            "module.kv_st_services.module.grid_var.azurerm_storage_blob.sinequa_authentication_enabled",
            "module.kv_st_services.module.grid_var.azurerm_storage_blob.sinequa_beta",
            "module.kv_st_services.module.grid_var.azurerm_storage_blob.sinequa_primary_nodes",
            "module.network.azurerm_network_security_group.sinequa_nsg_app",
            "module.network.azurerm_network_security_group.sinequa_nsg_front",
            "module.network.azurerm_network_security_rule.http_on_app",
            "module.network.azurerm_network_security_rule.rdp_on_app",
            "module.network.azurerm_subnet.subnet_app",
            "module.network.azurerm_subnet.subnet_front",
            "module.network.azurerm_subnet_network_security_group_association.sinequa_subnet_nsg_app",
            "module.network.azurerm_subnet_network_security_group_association.sinequa_subnet_nsg_front",
            "module.network.azurerm_virtual_network.sinequa_vnet",
            "module.vm-primary-node1.azurerm_network_interface.sinequa_vm_nic",
            "module.vm-primary-node1.azurerm_public_ip.sinequa_vm_pip",
            "random_password.passwd",
            "random_password.sq_passwd"
          ]
        }
      ]
    },
    {
      "module": "module.vm-primary-node1",
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "sinequa_vm_pip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/58006b71-9fca-4df3-ae9b-893c6e4267ce/resourceGroups/rg-university-s4a-image_terraform/providers/Microsoft.Network/publicIPAddresses/pip-vm-node1",
            "idle_timeout_in_minutes": 4,
            "ip_version": "IPv4",
            "location": "japaneast",
            "name": "pip-vm-node1",
            "resource_group_name": "rg-university-s4a-image_terraform",
            "sku": "Basic",
            "sku_tier": "Regional",
            "tags": {
              "sinequa-auto-disk": "auto",
              "sinequa-data-storage-url": "https://stprim0bc56606a55823e8ef.blob.core.windows.net/sinequa/grids/rg-university-s4a-image_terraform/",
              "sinequa-engine": "engine1",
              "sinequa-node": "vm-node1",
              "sinequa-path": "C:\\sinequa",
              "sinequa-primary-node-id": "1",
              "sinequa-webapp": "webApp1",
              "sinequa-webapp-fw-port": "80"
            }
          },
          "dependencies": [
            "azurerm_resource_group.sinequa_rg",
            "module.kv_st_services.azurerm_key_vault.sinequa_kv",
            "module.kv_st_services.azurerm_key_vault_secret.sinequa_authentication_secret",
            "module.kv_st_services.azurerm_key_vault_secret.sinequa_kv_default_admin_password",
            "module.kv_st_services.azurerm_key_vault_secret.sinequa_kv_secret_password",
            "module.kv_st_services.azurerm_key_vault_secret.sinequa_kv_secret_sinequa_license",
            "module.kv_st_services.azurerm_role_assignment.sinequa_kv_role_for_id",
            "module.kv_st_services.azurerm_role_assignment.sinequa_kv_role_for_me",
            "module.kv_st_services.azurerm_role_assignment.sinequa_st_hot_role_id",
            "module.kv_st_services.azurerm_role_assignment.sinequa_st_premium_role_id",
            "module.kv_st_services.azurerm_storage_account.sinequa_st_hot",
            "module.kv_st_services.azurerm_storage_account.sinequa_st_premium",
            "module.kv_st_services.azurerm_storage_blob.sinequa-secondary",
            "module.kv_st_services.azurerm_storage_container.sinequa_st_hot_container",
            "module.kv_st_services.azurerm_storage_container.sinequa_st_premium_container",
            "module.kv_st_services.azurerm_user_assigned_identity.identity",
            "module.kv_st_services.data.azurerm_client_config.current",
            "module.kv_st_services.module.grid_var.azurerm_storage_blob.sinequa-engine-aliases",
            "module.kv_st_services.module.grid_var.azurerm_storage_blob.sinequa-enginelist-aliases",
            "module.kv_st_services.module.grid_var.azurerm_storage_blob.sinequa-indexer-aliases",
            "module.kv_st_services.module.grid_var.azurerm_storage_blob.sinequa-indexerlist-aliases",
            "module.kv_st_services.module.grid_var.azurerm_storage_blob.sinequa-keyvault",
            "module.kv_st_services.module.grid_var.azurerm_storage_blob.sinequa-node-aliases",
            "module.kv_st_services.module.grid_var.azurerm_storage_blob.sinequa-nodelist-aliases",
            "module.kv_st_services.module.grid_var.azurerm_storage_blob.sinequa-queuecluster",
            "module.kv_st_services.module.grid_var.azurerm_storage_blob.sinequa-version",
            "module.kv_st_services.module.grid_var.azurerm_storage_blob.sinequa_authentication_enabled",
            "module.kv_st_services.module.grid_var.azurerm_storage_blob.sinequa_beta",
            "module.kv_st_services.module.grid_var.azurerm_storage_blob.sinequa_primary_nodes",
            "module.network.azurerm_network_security_group.sinequa_nsg_app",
            "module.network.azurerm_network_security_group.sinequa_nsg_front",
            "module.network.azurerm_network_security_rule.http_on_app",
            "module.network.azurerm_network_security_rule.rdp_on_app",
            "module.network.azurerm_subnet.subnet_app",
            "module.network.azurerm_subnet.subnet_front",
            "module.network.azurerm_subnet_network_security_group_association.sinequa_subnet_nsg_app",
            "module.network.azurerm_subnet_network_security_group_association.sinequa_subnet_nsg_front",
            "module.network.azurerm_virtual_network.sinequa_vnet",
            "random_password.passwd",
            "random_password.sq_passwd"
          ]
        }
      ]
    },
    {
      "module": "module.vm-primary-node2",
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "sinequa_vm_nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/58006b71-9fca-4df3-ae9b-893c6e4267ce/resourceGroups/rg-university-s4a-image_terraform/providers/Microsoft.Network/networkInterfaces/nic-vm-node2",
            "internal_domain_name_suffix": "ysn53tbdagwevfh3rwuydoprjh.lx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "ipconfig",
                "primary": true,
                "private_ip_address": "10.3.1.5",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/58006b71-9fca-4df3-ae9b-893c6e4267ce/resourceGroups/rg-university-s4a-image_terraform/providers/Microsoft.Network/virtualNetworks/vnet/subnets/snet-app"
              }
            ],
            "location": "japaneast",
            "name": "nic-vm-node2",
            "private_ip_address": "10.3.1.5",
            "private_ip_addresses": [
              "10.3.1.5"
            ],
            "resource_group_name": "rg-university-s4a-image_terraform",
            "tags": {
              "sinequa-auto-disk": "auto",
              "sinequa-data-storage-url": "https://stprim0bc56606a55823e8ef.blob.core.windows.net/sinequa/grids/rg-university-s4a-image_terraform/",
              "sinequa-engine": "engine2",
              "sinequa-node": "vm-node2",
              "sinequa-path": "C:\\sinequa",
              "sinequa-primary-node-id": "2",
              "sinequa-webapp": "webApp2",
              "sinequa-webapp-fw-port": "80"
            }
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "ip_configuration"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "subnet_id"
              }
            ]
          ],
          "dependencies": [
            "azurerm_resource_group.sinequa_rg",
            "module.kv_st_services.azurerm_key_vault.sinequa_kv",
            "module.kv_st_services.azurerm_key_vault_secret.sinequa_authentication_secret",
            "module.kv_st_services.azurerm_key_vault_secret.sinequa_kv_default_admin_password",
            "module.kv_st_services.azurerm_key_vault_secret.sinequa_kv_secret_password",
            "module.kv_st_services.azurerm_key_vault_secret.sinequa_kv_secret_sinequa_license",
            "module.kv_st_services.azurerm_role_assignment.sinequa_kv_role_for_id",
            "module.kv_st_services.azurerm_role_assignment.sinequa_kv_role_for_me",
            "module.kv_st_services.azurerm_role_assignment.sinequa_st_hot_role_id",
            "module.kv_st_services.azurerm_role_assignment.sinequa_st_premium_role_id",
            "module.kv_st_services.azurerm_storage_account.sinequa_st_hot",
            "module.kv_st_services.azurerm_storage_account.sinequa_st_premium",
            "module.kv_st_services.azurerm_storage_blob.sinequa-secondary",
            "module.kv_st_services.azurerm_storage_container.sinequa_st_hot_container",
            "module.kv_st_services.azurerm_storage_container.sinequa_st_premium_container",
            "module.kv_st_services.azurerm_user_assigned_identity.identity",
            "module.kv_st_services.data.azurerm_client_config.current",
            "module.kv_st_services.module.grid_var.azurerm_storage_blob.sinequa-engine-aliases",
            "module.kv_st_services.module.grid_var.azurerm_storage_blob.sinequa-enginelist-aliases",
            "module.kv_st_services.module.grid_var.azurerm_storage_blob.sinequa-indexer-aliases",
            "module.kv_st_services.module.grid_var.azurerm_storage_blob.sinequa-indexerlist-aliases",
            "module.kv_st_services.module.grid_var.azurerm_storage_blob.sinequa-keyvault",
            "module.kv_st_services.module.grid_var.azurerm_storage_blob.sinequa-node-aliases",
            "module.kv_st_services.module.grid_var.azurerm_storage_blob.sinequa-nodelist-aliases",
            "module.kv_st_services.module.grid_var.azurerm_storage_blob.sinequa-queuecluster",
            "module.kv_st_services.module.grid_var.azurerm_storage_blob.sinequa-version",
            "module.kv_st_services.module.grid_var.azurerm_storage_blob.sinequa_authentication_enabled",
            "module.kv_st_services.module.grid_var.azurerm_storage_blob.sinequa_beta",
            "module.kv_st_services.module.grid_var.azurerm_storage_blob.sinequa_primary_nodes",
            "module.network.azurerm_network_security_group.sinequa_nsg_app",
            "module.network.azurerm_network_security_group.sinequa_nsg_front",
            "module.network.azurerm_network_security_rule.http_on_app",
            "module.network.azurerm_network_security_rule.rdp_on_app",
            "module.network.azurerm_subnet.subnet_app",
            "module.network.azurerm_subnet.subnet_front",
            "module.network.azurerm_subnet_network_security_group_association.sinequa_subnet_nsg_app",
            "module.network.azurerm_subnet_network_security_group_association.sinequa_subnet_nsg_front",
            "module.network.azurerm_virtual_network.sinequa_vnet",
            "module.vm-primary-node2.azurerm_public_ip.sinequa_vm_pip",
            "random_password.passwd",
            "random_password.sq_passwd"
          ]
        }
      ]
    },
    {
      "module": "module.vm-primary-node2",
      "mode": "managed",
      "type": "azurerm_network_interface_security_group_association",
      "name": "sinequa_nic_nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/58006b71-9fca-4df3-ae9b-893c6e4267ce/resourceGroups/rg-university-s4a-image_terraform/providers/Microsoft.Network/networkInterfaces/nic-vm-node2|/subscriptions/58006b71-9fca-4df3-ae9b-893c6e4267ce/resourceGroups/rg-university-s4a-image_terraform/providers/Microsoft.Network/networkSecurityGroups/nsg-app",
            "network_interface_id": "/subscriptions/58006b71-9fca-4df3-ae9b-893c6e4267ce/resourceGroups/rg-university-s4a-image_terraform/providers/Microsoft.Network/networkInterfaces/nic-vm-node2",
            "network_security_group_id": "/subscriptions/58006b71-9fca-4df3-ae9b-893c6e4267ce/resourceGroups/rg-university-s4a-image_terraform/providers/Microsoft.Network/networkSecurityGroups/nsg-app"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "network_security_group_id"
              }
            ]
          ],
          "dependencies": [
            "azurerm_resource_group.sinequa_rg",
            "module.kv_st_services.azurerm_key_vault.sinequa_kv",
            "module.kv_st_services.azurerm_key_vault_secret.sinequa_authentication_secret",
            "module.kv_st_services.azurerm_key_vault_secret.sinequa_kv_default_admin_password",
            "module.kv_st_services.azurerm_key_vault_secret.sinequa_kv_secret_password",
            "module.kv_st_services.azurerm_key_vault_secret.sinequa_kv_secret_sinequa_license",
            "module.kv_st_services.azurerm_role_assignment.sinequa_kv_role_for_id",
            "module.kv_st_services.azurerm_role_assignment.sinequa_kv_role_for_me",
            "module.kv_st_services.azurerm_role_assignment.sinequa_st_hot_role_id",
            "module.kv_st_services.azurerm_role_assignment.sinequa_st_premium_role_id",
            "module.kv_st_services.azurerm_storage_account.sinequa_st_hot",
            "module.kv_st_services.azurerm_storage_account.sinequa_st_premium",
            "module.kv_st_services.azurerm_storage_blob.sinequa-secondary",
            "module.kv_st_services.azurerm_storage_container.sinequa_st_hot_container",
            "module.kv_st_services.azurerm_storage_container.sinequa_st_premium_container",
            "module.kv_st_services.azurerm_user_assigned_identity.identity",
            "module.kv_st_services.data.azurerm_client_config.current",
            "module.kv_st_services.module.grid_var.azurerm_storage_blob.sinequa-engine-aliases",
            "module.kv_st_services.module.grid_var.azurerm_storage_blob.sinequa-enginelist-aliases",
            "module.kv_st_services.module.grid_var.azurerm_storage_blob.sinequa-indexer-aliases",
            "module.kv_st_services.module.grid_var.azurerm_storage_blob.sinequa-indexerlist-aliases",
            "module.kv_st_services.module.grid_var.azurerm_storage_blob.sinequa-keyvault",
            "module.kv_st_services.module.grid_var.azurerm_storage_blob.sinequa-node-aliases",
            "module.kv_st_services.module.grid_var.azurerm_storage_blob.sinequa-nodelist-aliases",
            "module.kv_st_services.module.grid_var.azurerm_storage_blob.sinequa-queuecluster",
            "module.kv_st_services.module.grid_var.azurerm_storage_blob.sinequa-version",
            "module.kv_st_services.module.grid_var.azurerm_storage_blob.sinequa_authentication_enabled",
            "module.kv_st_services.module.grid_var.azurerm_storage_blob.sinequa_beta",
            "module.kv_st_services.module.grid_var.azurerm_storage_blob.sinequa_primary_nodes",
            "module.network.azurerm_network_security_group.sinequa_nsg_app",
            "module.network.azurerm_network_security_group.sinequa_nsg_front",
            "module.network.azurerm_network_security_rule.http_on_app",
            "module.network.azurerm_network_security_rule.rdp_on_app",
            "module.network.azurerm_subnet.subnet_app",
            "module.network.azurerm_subnet.subnet_front",
            "module.network.azurerm_subnet_network_security_group_association.sinequa_subnet_nsg_app",
            "module.network.azurerm_subnet_network_security_group_association.sinequa_subnet_nsg_front",
            "module.network.azurerm_virtual_network.sinequa_vnet",
            "module.vm-primary-node2.azurerm_network_interface.sinequa_vm_nic",
            "module.vm-primary-node2.azurerm_public_ip.sinequa_vm_pip",
            "random_password.passwd",
            "random_password.sq_passwd"
          ]
        }
      ]
    },
    {
      "module": "module.vm-primary-node3",
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "sinequa_vm_nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/58006b71-9fca-4df3-ae9b-893c6e4267ce/resourceGroups/rg-university-s4a-image_terraform/providers/Microsoft.Network/networkInterfaces/nic-vm-node3",
            "internal_domain_name_suffix": "ysn53tbdagwevfh3rwuydoprjh.lx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "ipconfig",
                "primary": true,
                "private_ip_address": "10.3.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/58006b71-9fca-4df3-ae9b-893c6e4267ce/resourceGroups/rg-university-s4a-image_terraform/providers/Microsoft.Network/virtualNetworks/vnet/subnets/snet-app"
              }
            ],
            "location": "japaneast",
            "name": "nic-vm-node3",
            "private_ip_address": "10.3.1.4",
            "private_ip_addresses": [
              "10.3.1.4"
            ],
            "resource_group_name": "rg-university-s4a-image_terraform",
            "tags": {
              "sinequa-auto-disk": "auto",
              "sinequa-data-storage-url": "https://stprim0bc56606a55823e8ef.blob.core.windows.net/sinequa/grids/rg-university-s4a-image_terraform/",
              "sinequa-node": "vm-node3",
              "sinequa-path": "C:\\sinequa",
              "sinequa-primary-node-id": "3"
            }
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "ip_configuration"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "subnet_id"
              }
            ]
          ],
          "dependencies": [
            "azurerm_resource_group.sinequa_rg",
            "module.kv_st_services.azurerm_key_vault.sinequa_kv",
            "module.kv_st_services.azurerm_key_vault_secret.sinequa_authentication_secret",
            "module.kv_st_services.azurerm_key_vault_secret.sinequa_kv_default_admin_password",
            "module.kv_st_services.azurerm_key_vault_secret.sinequa_kv_secret_password",
            "module.kv_st_services.azurerm_key_vault_secret.sinequa_kv_secret_sinequa_license",
            "module.kv_st_services.azurerm_role_assignment.sinequa_kv_role_for_id",
            "module.kv_st_services.azurerm_role_assignment.sinequa_kv_role_for_me",
            "module.kv_st_services.azurerm_role_assignment.sinequa_st_hot_role_id",
            "module.kv_st_services.azurerm_role_assignment.sinequa_st_premium_role_id",
            "module.kv_st_services.azurerm_storage_account.sinequa_st_hot",
            "module.kv_st_services.azurerm_storage_account.sinequa_st_premium",
            "module.kv_st_services.azurerm_storage_blob.sinequa-secondary",
            "module.kv_st_services.azurerm_storage_container.sinequa_st_hot_container",
            "module.kv_st_services.azurerm_storage_container.sinequa_st_premium_container",
            "module.kv_st_services.azurerm_user_assigned_identity.identity",
            "module.kv_st_services.data.azurerm_client_config.current",
            "module.kv_st_services.module.grid_var.azurerm_storage_blob.sinequa-engine-aliases",
            "module.kv_st_services.module.grid_var.azurerm_storage_blob.sinequa-enginelist-aliases",
            "module.kv_st_services.module.grid_var.azurerm_storage_blob.sinequa-indexer-aliases",
            "module.kv_st_services.module.grid_var.azurerm_storage_blob.sinequa-indexerlist-aliases",
            "module.kv_st_services.module.grid_var.azurerm_storage_blob.sinequa-keyvault",
            "module.kv_st_services.module.grid_var.azurerm_storage_blob.sinequa-node-aliases",
            "module.kv_st_services.module.grid_var.azurerm_storage_blob.sinequa-nodelist-aliases",
            "module.kv_st_services.module.grid_var.azurerm_storage_blob.sinequa-queuecluster",
            "module.kv_st_services.module.grid_var.azurerm_storage_blob.sinequa-version",
            "module.kv_st_services.module.grid_var.azurerm_storage_blob.sinequa_authentication_enabled",
            "module.kv_st_services.module.grid_var.azurerm_storage_blob.sinequa_beta",
            "module.kv_st_services.module.grid_var.azurerm_storage_blob.sinequa_primary_nodes",
            "module.network.azurerm_network_security_group.sinequa_nsg_app",
            "module.network.azurerm_network_security_group.sinequa_nsg_front",
            "module.network.azurerm_network_security_rule.http_on_app",
            "module.network.azurerm_network_security_rule.rdp_on_app",
            "module.network.azurerm_subnet.subnet_app",
            "module.network.azurerm_subnet.subnet_front",
            "module.network.azurerm_subnet_network_security_group_association.sinequa_subnet_nsg_app",
            "module.network.azurerm_subnet_network_security_group_association.sinequa_subnet_nsg_front",
            "module.network.azurerm_virtual_network.sinequa_vnet",
            "module.vm-primary-node3.azurerm_public_ip.sinequa_vm_pip",
            "random_password.passwd",
            "random_password.sq_passwd"
          ]
        }
      ]
    },
    {
      "module": "module.vm-primary-node3",
      "mode": "managed",
      "type": "azurerm_network_interface_security_group_association",
      "name": "sinequa_nic_nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/58006b71-9fca-4df3-ae9b-893c6e4267ce/resourceGroups/rg-university-s4a-image_terraform/providers/Microsoft.Network/networkInterfaces/nic-vm-node3|/subscriptions/58006b71-9fca-4df3-ae9b-893c6e4267ce/resourceGroups/rg-university-s4a-image_terraform/providers/Microsoft.Network/networkSecurityGroups/nsg-app",
            "network_interface_id": "/subscriptions/58006b71-9fca-4df3-ae9b-893c6e4267ce/resourceGroups/rg-university-s4a-image_terraform/providers/Microsoft.Network/networkInterfaces/nic-vm-node3",
            "network_security_group_id": "/subscriptions/58006b71-9fca-4df3-ae9b-893c6e4267ce/resourceGroups/rg-university-s4a-image_terraform/providers/Microsoft.Network/networkSecurityGroups/nsg-app"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "network_security_group_id"
              }
            ]
          ],
          "dependencies": [
            "azurerm_resource_group.sinequa_rg",
            "module.kv_st_services.azurerm_key_vault.sinequa_kv",
            "module.kv_st_services.azurerm_key_vault_secret.sinequa_authentication_secret",
            "module.kv_st_services.azurerm_key_vault_secret.sinequa_kv_default_admin_password",
            "module.kv_st_services.azurerm_key_vault_secret.sinequa_kv_secret_password",
            "module.kv_st_services.azurerm_key_vault_secret.sinequa_kv_secret_sinequa_license",
            "module.kv_st_services.azurerm_role_assignment.sinequa_kv_role_for_id",
            "module.kv_st_services.azurerm_role_assignment.sinequa_kv_role_for_me",
            "module.kv_st_services.azurerm_role_assignment.sinequa_st_hot_role_id",
            "module.kv_st_services.azurerm_role_assignment.sinequa_st_premium_role_id",
            "module.kv_st_services.azurerm_storage_account.sinequa_st_hot",
            "module.kv_st_services.azurerm_storage_account.sinequa_st_premium",
            "module.kv_st_services.azurerm_storage_blob.sinequa-secondary",
            "module.kv_st_services.azurerm_storage_container.sinequa_st_hot_container",
            "module.kv_st_services.azurerm_storage_container.sinequa_st_premium_container",
            "module.kv_st_services.azurerm_user_assigned_identity.identity",
            "module.kv_st_services.data.azurerm_client_config.current",
            "module.kv_st_services.module.grid_var.azurerm_storage_blob.sinequa-engine-aliases",
            "module.kv_st_services.module.grid_var.azurerm_storage_blob.sinequa-enginelist-aliases",
            "module.kv_st_services.module.grid_var.azurerm_storage_blob.sinequa-indexer-aliases",
            "module.kv_st_services.module.grid_var.azurerm_storage_blob.sinequa-indexerlist-aliases",
            "module.kv_st_services.module.grid_var.azurerm_storage_blob.sinequa-keyvault",
            "module.kv_st_services.module.grid_var.azurerm_storage_blob.sinequa-node-aliases",
            "module.kv_st_services.module.grid_var.azurerm_storage_blob.sinequa-nodelist-aliases",
            "module.kv_st_services.module.grid_var.azurerm_storage_blob.sinequa-queuecluster",
            "module.kv_st_services.module.grid_var.azurerm_storage_blob.sinequa-version",
            "module.kv_st_services.module.grid_var.azurerm_storage_blob.sinequa_authentication_enabled",
            "module.kv_st_services.module.grid_var.azurerm_storage_blob.sinequa_beta",
            "module.kv_st_services.module.grid_var.azurerm_storage_blob.sinequa_primary_nodes",
            "module.network.azurerm_network_security_group.sinequa_nsg_app",
            "module.network.azurerm_network_security_group.sinequa_nsg_front",
            "module.network.azurerm_network_security_rule.http_on_app",
            "module.network.azurerm_network_security_rule.rdp_on_app",
            "module.network.azurerm_subnet.subnet_app",
            "module.network.azurerm_subnet.subnet_front",
            "module.network.azurerm_subnet_network_security_group_association.sinequa_subnet_nsg_app",
            "module.network.azurerm_subnet_network_security_group_association.sinequa_subnet_nsg_front",
            "module.network.azurerm_virtual_network.sinequa_vnet",
            "module.vm-primary-node3.azurerm_network_interface.sinequa_vm_nic",
            "module.vm-primary-node3.azurerm_public_ip.sinequa_vm_pip",
            "random_password.passwd",
            "random_password.sq_passwd"
          ]
        }
      ]
    }
  ]
}